--- a/index.html
+++ b/index.html
@@ -1,31 +1,3 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><title>scheduling-project</title><script>(function (para) {
-        var p = para.sdk_url, n = para.name, w = window, d = document, s = 'script', x = null, y = null;
-        if (typeof (w['sensorsDataAnalytic201505']) !== 'undefined') {
-            return false;
-        }
-        w['sensorsDataAnalytic201505'] = n;
-        w[n] = w[n] || function (a) { return function () { (w[n]._q = w[n]._q || []).push([a, arguments]); } };
-        var ifs = ['track', 'quick', 'register', 'registerPage', 'registerOnce', 'trackSignup', 'trackAbtest', 'setProfile', 'setOnceProfile', 'appendProfile', 'incrementProfile', 'deleteProfile', 'unsetProfile', 'identify', 'login', 'logout', 'trackLink', 'clearAllRegister', 'getAppStatus'];
-        for (var i = 0; i < ifs.length; i++) {
-            w[n][ifs[i]] = w[n].call(null, ifs[i]);
-        }
-        if (!w[n]._t) {
-            x = d.createElement(s), y = d.getElementsByTagName(s)[0];
-            x.async = 1;
-            x.src = p;
-            x.setAttribute('charset', 'UTF-8');
-            w[n].para = para;
-            y.parentNode.insertBefore(x, y);
-        }
-    })({
-        sdk_url: 'https://869359954.github.io/sadefine/sensorsdata.full.js',
-        // sdk_url: 'https://cdn.jsdelivr.net/npm/sa-sdk-javascript@1.14.13/sensorsdata.min.js',
-        heatmap_url: 'https://cdn.jsdelivr.net/npm/sa-sdk-javascript@1.14.13/heatmap.min.js',
-        name: 'sensors',
-        use_app_track: true,
-        server_url: 'http://liuxing2.debugbox.sensorsdata.cn/sa?project=guozheng',
-        heatmap:{}
-    });
-    sensors.quick('autoTrack');</script><link href=css/about.79f8befe.css rel=prefetch><link href=css/chunk-47da50f3.5b40ad54.css rel=prefetch><link href=js/about.69485a7a.js rel=prefetch><link href=js/chunk-47da50f3.f59c352e.js rel=prefetch><link href=css/app.f2c51b02.css rel=preload as=style><link href=css/chunk-vendors.4a8ce2dc.css rel=preload as=style><link href=js/app.9c94ef03.js rel=preload as=script><link href=js/chunk-vendors.9bdc1dd0.js rel=preload as=script><link href=css/chunk-vendors.4a8ce2dc.css rel=stylesheet><link href=css/app.f2c51b02.css rel=stylesheet></head><body><noscript><strong>We're sorry but scheduling-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.9bdc1dd0.js></script><script src=js/app.9c94ef03.js></script></body><style>body {
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><title>scheduling-project</title><link href=css/about.79f8befe.css rel=prefetch><link href=css/chunk-03cc0568.1b73e997.css rel=prefetch><link href=js/about.598dbe25.js rel=prefetch><link href=js/chunk-03cc0568.cccd9eba.js rel=prefetch><link href=css/app.f345e751.css rel=preload as=style><link href=css/chunk-vendors.4a8ce2dc.css rel=preload as=style><link href=js/app.c267793f.js rel=preload as=script><link href=js/chunk-vendors.db88a2a2.js rel=preload as=script><link href=css/chunk-vendors.4a8ce2dc.css rel=stylesheet><link href=css/app.f345e751.css rel=stylesheet></head><body><noscript><strong>We're sorry but scheduling-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.db88a2a2.js></script><script src=js/app.c267793f.js></script></body><style>body {
     margin: 0;
   }</style></html>
